@@ -1,3 +1,8 @@
+xfburn 0.x
+==========
+
+- Fix segfault when removing a file and one of its parent directory together
+
 xfburn 0.2.0beta
 ================
 
